--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev</title>
+    <title>Main</title>
 </head>
 <body>
     dev
+    bugfix
 </body>
 </html>
